--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,6 +36,11 @@ jobs:
       - run:
           name: Running tests
           command: python3 manage.py test --settings=core.settingstest
+      - run:
+          name: Upload test coverage to Coveralls
+          command: |
+            gem install coveralls-lcov
+            coveralls-lcov --repo-token $COVERALLS_REPO_TOKEN coverage/lcov.info
 
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
