--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -37,11 +37,13 @@ jobs:
           name: Running tests
           command: python3 manage.py test --settings=core.settingstest
       - run:
+          name: Install dependencies
+          command: |
+            pip install coveralls
+      - run:
           name: Upload test coverage to Coveralls
           command: |
-            gem install coveralls-lcov
-            coveralls-lcov --repo-token $COVERALLS_REPO_TOKEN coverage/lcov.info
-
+            coveralls
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
 workflows:
@@ -49,3 +51,4 @@ workflows:
     # Inside the workflow, you define the jobs you want to run.
     jobs:
       - build-and-test
+      
