--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -52,7 +52,7 @@ jobs:
       - run:
           name: Upload test coverage to Coveralls
           command: |
-            coveralls --repo-token $COVERALLS_REPO_TOKEN
+            coveralls --repo-token $COVERALLS_REPO_TOKEN coverage/lcov.info
       
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
