--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,8 +36,8 @@ jobs:
       - run:
           name: Install dependencies
           command: |
-            pip install coverage
-            pip install python-coveralls
+            pip install coverage --upgrade
+            pip install coveralls
            
       
       - run:
